<resources>
    <string name="app_name">蓝穹</string>
    <string name="news">新闻</string>
    <string name="order">订阅</string>
    <string name="my">我的</string>
    <string name="top">置顶</string>
    <string name="refreshing">正在刷新</string>
    <string name="pullRefresh">下拉刷新</string>
    <string name="loadError">加载失败</string>
    <string name="reload">点击重新加载</string>
    <string name="cancel">取消</string>
    <string name="hotSearchTopic">热门搜索关键字</string>
    <string name="searchHint">请输入关键字</string>
    <string name="noResult">无相关关键词文章</string>
    <string name="writeComment">写评论</string>
    <string name="subscribe">订阅</string>
    <string name="collectAndHistory">收藏与历史</string>
    <string name="message">消息与通知</string>
    <string name="nightMode">夜间模式</string>
    <string name="about">关于</string>
    <string name="liked">赞过的</string>
    <string name="currentVersion">当前版本</string>
    <string name="aboutApp">关于蓝穹</string>
    <string name="backNews">正文</string>
    <string name="allComments">所有评论</string>
    <string name="noComments">暂无评论</string>
    <string name="send">发送</string>
    <string name="messageNotify">消息通知</string>
    <string name="likedComment">赞过的评论</string>
    <string name="showAllComments">已显示全部内容</string>
    <string name="edit">编辑</string>
    <string name="chooseAll">全选</string>
    <string name="delete">删除</string>
    <string name="no">没有内容</string>
</resources>
