<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.CollectHistoryActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <com.flyco.tablayout.CommonTabLayout
            android:id="@+id/commonTabLayout"
            android:layout_width="80dp"
            android:layout_height="48dp"
            app:tl_iconVisible="false"
            app:tl_textBold="true"
            app:tl_textSelectColor="@color/colorBlue"
            app:tl_textUnselectColor="@color/colorGray"
            app:tl_indicator_width="10dp"
            app:tl_textsize="14sp"
            app:tl_indicator_color="@color/colorBlue"
            app:tl_indicator_anim_enable="true"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_back"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/editTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"/>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/collectHistoryViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <FrameLayout
        android:id="@+id/commandBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:background="@color/colorBlue">
        <TextView
            android:id="@+id/chooseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/chooseAll"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/deleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/delete"
            android:layout_gravity="right|center_vertical"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="8dp"
            android:textSize="18sp"/>
    </FrameLayout>
</LinearLayout>