<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/my"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorView"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/img_login"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_login2"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/collectAndHistoryLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/collectAndHistoryImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/collection"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/collectAndHistoryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collectAndHistory"
                        android:textColor="@color/colorItem"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="32dp"
                android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/messageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:text="@string/message"
                        android:textColor="@color/colorItem"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/dark_go"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"/>
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorView" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@color/colorItem"
                        android:text="@string/nightMode"/>
                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/nightSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="32dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/aboutLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@color/colorItem"
                        android:text="@string/about"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/dark_go"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"/>
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorView" />
                <FrameLayout
                    android:id="@+id/likedLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:text="@string/liked"
                        android:textColor="@color/colorItem"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/dark_go"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"/>
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorView" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@color/colorItem"
                        android:text="@string/currentVersion"/>
                    <TextView
                        android:id="@+id/versionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/colorGray"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
