<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.NewsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/backToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:navigationIcon="@mipmap/icon_back"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView"/>
    <ScrollView
        android:id="@+id/newsScrollView"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/fromImageView"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_uc"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/fromTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorHeader"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/topTextView"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/top"
                                android:textColor="@color/colorTop"
                                android:background="@drawable/textview_border"/>
                            <TextView
                                android:id="@+id/timeTextView"
                                android:layout_marginLeft="8dp"
                                android:textColor="@color/colorTimeHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <ToggleButton
                    android:id="@+id/subscribeToggleButton"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:textColor="@color/colorSubscribe"
                    android:background="@color/colorDarkGray"
                    android:checked="false"
                    android:textOn="@string/subscribe"
                    android:textOff="@string/subscribe" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <FrameLayout
            android:id="@+id/commentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical">
            <TextView
                android:id="@+id/commentEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/search_view"
                android:padding="5dp"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/write_comment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorGray"
                    android:layout_marginLeft="4dp"
                    android:text="@string/writeComment"/>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/commentsFrameLayout"
                android:layout_width="30dp"
                android:layout_height="30dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_comment_2"/>
                <TextView
                    android:id="@+id/commentCountTextView"
                    android:layout_gravity="right|top"
                    android:gravity="center"
                    android:layout_width="16dp"
                    android:layout_height="12dp"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:background="@drawable/red_textview"/>
            </FrameLayout>
            <ImageView
                android:id="@+id/collectImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_collect"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:id="@+id/shareImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_share"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>